# inpe_bdc_mcp

./: .gitignore  README.en.md  README.md  USAGE_GUIDE.en.md  USAGE_GUIDE.md  install.ps1  pyproject.toml
src/inpe_bdc_mcp/: __init__.py  __main__.py  auth.py  catalogs.py  client.py  server.py
src/inpe_bdc_mcp/models/: change_detection.py  classification.py  collection.py  item.py  preprocessing.py  search.py  spectral.py
src/inpe_bdc_mcp/resources/: catalog.py  collections.py
src/inpe_bdc_mcp/tools/: analysis.py  biomes.py  catalog.py  change_detection.py  classification.py  collections.py  datacube.py  items.py  preprocessing.py  projection.py  satellites.py  search.py  spectral.py  timeseries.py
src/inpe_bdc_mcp/utils/: bdc_grid.py  brazil.py  cache.py  geo.py  metrics.py
tests/: conftest.py  test_cache.py  test_change_detection.py  test_classification.py  test_client.py  test_metrics.py  test_projection.py  test_server.py  test_spectral.py  test_timeseries.py  test_tools.py
