[project]
name = "inpe-bdc-mcp"
version = "0.1.0"
description = "MCP Server for INPE Brazil Data Cube STAC API — satellite imagery and data cubes for AI agents"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pystac-client>=0.8.0",
    "pystac>=1.10.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
]

[project.scripts]
inpe-bdc-mcp = "inpe_bdc_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
